fix: schema.org

--- a/#src/templates/theme/includes/card.html
+++ b/#src/templates/theme/includes/card.html
@@ -16,7 +16,7 @@
     {% endif %}
   </div>
   <div class="card__content">
-    <a href="{{ product.get_absolute_url }}" class="card__content-title" itemprop="name">{{ product.model }}</a>
+    <a href="{{ product.get_absolute_url }}" class="card__content-title"><span itemprop="name">{{ product.model }}</span></a>
     {% for chr in product.chars.all %} {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %} <p
     class="card__content-char">Материал: {{ chr }}</p>
     {% endif %} {% endfor %}
@@ -28,10 +28,6 @@
       <link itemprop="availability" href="http://schema.org/InStock"/>
     </div>
     {% endif %}
-    <div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
-      <span itemprop="ratingValue"></span>
-      <span itemprop="reviewCount"></span>
-    </div>
     <div itemprop="review" itemscope itemtype="http://schema.org/Review">
       <span itemprop="name"></span>
       <span itemprop="author"></span>
@@ -64,17 +60,13 @@
     {% endif %}
   </div>
   <div class="card__content">
-    <a href="{{ product.get_absolute_url }}" class="card__content-title" itemprop="name"> {{ product.name }} </a>
+    <a href="{{ product.get_absolute_url }}" class="card__content-title"><span itemprop="name">{{ product.name }}</span></a>
     {% for chr in product.chars.all %} {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %} <p
     class="card__content-char">Материал: {{ chr }}</p>
     {% endif %} {% endfor %}
     <div class="card__content-price">{{ product.price }} ₽</div>
     <meta itemprop="priceValidUntil" content="2029-12-31">
     <link itemprop="availability" href="http://schema.org/InStock"/>
-  </div>
-  <div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
-    <span itemprop="ratingValue"></span>
-    <span itemprop="reviewCount"></span>
   </div>
   <div itemprop="review" itemscope itemtype="http://schema.org/Review">
     <span itemprop="name"></span>
