--- a/#src/scss/pages/blog/blog-detail.scss
+++ b/#src/scss/pages/blog/blog-detail.scss
@@ -90,6 +90,7 @@
     ol{
       list-style: decimal;
       li{
+        list-style: decimal;
         display: block;
         line-height: 150%;
         position: relative;
