--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3175,6 +3175,7 @@ body::after {
 }
 
 .blog-detail__content ol li {
+  list-style: decimal;
   display: block;
   line-height: 150%;
   position: relative;
