--- a/#src/scss/pages/blog/blog-detail.scss
+++ b/#src/scss/pages/blog/blog-detail.scss
@@ -88,7 +88,7 @@
     }
 
     ol{
-      list-style: decimal;
+      list-style: circle;
       li{
         list-style: decimal;
         display: block;
