--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3171,7 +3171,7 @@ body::after {
 }
 
 .blog-detail__content ol {
-  list-style: decimal;
+  list-style: circle;
 }
 
 .blog-detail__content ol li {
