--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3171,11 +3171,11 @@ body::after {
 }
 
 .blog-detail__content ol {
-  list-style: circle;
+  counter-reset: custom-counter;
 }
 
 .blog-detail__content ol li {
-  list-style: decimal;
+  counter-increment: custom-counter;
   display: block;
   line-height: 150%;
   position: relative;
@@ -3183,6 +3183,14 @@ body::after {
 
 .blog-detail__content ol li:not(:last-child) {
   margin-bottom: 12px;
+}
+
+.blog-detail__content ol li::before {
+  content: counter(custom-counter);
+  color: #41a2d0;
+  width: 8px;
+  height: 8px;
+  margin-right: 6px;
 }
 
 .blog-detail__content ul li {
