--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -61,8 +61,8 @@
         </div>
       </div>
       <div class="main__content content-main">
-        <h1 class="content-main__title">Изготовим и установим <span>надгробный памятник в томске</span></h1>
-        <a href="{% url 'category' %}" class="content-main__link _btn">Перейти в каталог</a>
+        <h1 class="content-main__title">Рассрочка на <br> до 12 месяцев<span>,<br> без процентов,<br> банков, комиссий</span></h1>
+        <button type="button" data-popup="consultation-form" class="content-main__link _btn">Получить консультацию</button>
       </div>
     </div>
   </section>
@@ -70,8 +70,8 @@
   <section class="index-stock">
     <div class="index-stock__container">
       <div class="index-stock__grid">
-        <a href="{% url 'stock_product' %}" class="index-stock__item index-stock__item--first">
-          <img src="{% static 'theme/mb/images/skidka.jpg' %}" alt="Памятники со скидкой" title="Памятники со скидкой"
+        <a href="{% url 'gallery' %}" class="index-stock__item index-stock__item--first">
+          <img src="{% static 'theme/mb/images/a1.webp' %}" alt="Памятники со скидкой" title="Памятники со скидкой"
                class="index-stock__item-img"/>
           <!--          <h2 class="index-stock__item-title">Памятники со <br />скидкой</h2>-->
           <!--          <p class="index-stock__item-discount"></p>-->
