--- a/#src/templates/theme/pages/index.html
+++ b/#src/templates/theme/pages/index.html
@@ -71,7 +71,7 @@
     <div class="index-stock__container">
       <div class="index-stock__grid">
         <a href="{% url 'gallery' %}" class="index-stock__item index-stock__item--first">
-          <img src="{% static 'theme/mb/images/a1.webp' %}" alt="Памятники со скидкой" title="Памятники со скидкой"
+          <img src="{% static 'theme/mb/images/skidka.jpg' %}" alt="Памятники со скидкой" title="Памятники со скидкой"
                class="index-stock__item-img"/>
           <!--          <h2 class="index-stock__item-title">Памятники со <br />скидкой</h2>-->
           <!--          <p class="index-stock__item-discount"></p>-->
