--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -187,6 +187,14 @@
     // }
   }
 
+  //.content-main__subtitle
+
+  &__subtitle{
+    color: #fff0ff;
+    margin-top: 40px;
+    font-weight: 600;
+  }
+
   // .content-main__link
 
   &__link {
