--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -61,7 +61,8 @@
         </div>
       </div>
       <div class="main__content content-main">
-        <h1 class="content-main__title">Рассрочка на <br> до 12 месяцев<span>,<br> без процентов,<br> банков, комиссий</span></h1>
+        <h1 class="content-main__title">Изготовим <br>и установим <span>,<br>надгробный памятник</span></h1>
+        <p class="content-main__subtitle">Рассрочка на до 12 месяцев, без процентов, банков, комиссий</p>
         <button type="button" data-popup="consultation-form" class="content-main__link _btn">Получить консультацию</button>
       </div>
     </div>
