--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -167,8 +167,8 @@
   // .content-main__title
 
   &__title {
-    font-size: clamp(26px, 4vw, 72px);
-    max-width: 900px;
+    font-size: clamp(26px, 4vw, 60px);
+    max-width: 800px;
     line-height: 120%;
     text-transform: uppercase;
     color: $white;
@@ -190,6 +190,7 @@
   //.content-main__subtitle
 
   &__subtitle{
+    font-size: 25px;
     color: #fff0ff;
     margin-top: 40px;
     font-weight: 600;
