--- a/#src/templates/theme/pages/index.html
+++ b/#src/templates/theme/pages/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="main__content content-main">
         <h1 class="content-main__title">Изготовим <br>и установим <span>,<br>надгробный памятник</span></h1>
-        <p class="content-main__subtitle">Рассрочка на до 12 месяцев, без процентов, банков, комиссий</p>
+        <p class="content-main__subtitle">Рассрочка до 12 месяцев, без процентов, банков, комиссий</p>
         <button type="button" data-popup="consultation-form" class="content-main__link _btn">Получить консультацию</button>
       </div>
     </div>
