--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -191,7 +191,7 @@
 
   &__subtitle{
     font-size: 25px;
-    color: #fff0ff;
+    color: #ffffff;
     margin-top: 40px;
     font-weight: 600;
   }
