--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -356,7 +356,7 @@ html.lock body::before {
 
 .content-main__subtitle {
   font-size: 25px;
-  color: #fff0ff;
+  color: #ffffff;
   margin-top: 40px;
   font-weight: 600;
 }
