--- a/main/core/admin/templates/gallery/gallery_edit.html
+++ b/main/core/admin/templates/gallery/gallery_edit.html
@@ -37,6 +37,10 @@
               <label for="{{ form.cat_detail.id_for_label }}" class="form__controls-label">Выводить в категорию :</label>
               {{ form.cat_detail }} {{ form.cat_detail.errors }}
             </div>
+            <div class="form__group">
+              <label for="{{ form.work.id_for_label }}" class="form__controls-label">Наши работы :</label>
+              {{ form.work }} {{ form.work.errors }}
+            </div>
           </div>
         </div>
       </div>
