--- a/#src/templates/theme/pages/index.html
+++ b/#src/templates/theme/pages/index.html
@@ -74,7 +74,7 @@
         <a href="{% url 'gallery' %}" class="index-stock__item index-stock__item--first">
           <img src="{% static 'theme/mb/images/1.jpg' %}" alt="Памятники со скидкой" title="Памятники со скидкой"
                class="index-stock__item-img"/>
-          <!--          <h2 class="index-stock__item-title">Памятники со <br />скидкой</h2>-->
+                    <h2 class="index-stock__item-title">Наши работы</h2>
           <!--          <p class="index-stock__item-discount"></p>-->
         </a>
         {% if category_gallery %}
