--- a/#src/templates/theme/pages/catalog/category-details.html
+++ b/#src/templates/theme/pages/catalog/category-details.html
@@ -45,8 +45,8 @@
         </div>
       </div>
 
-      <div class="category-details__row">
-        {% if request.path != "/category/ogradki/" %}
+      <div class="category-details__row-onecol">
+        {% comment %}{% if request.path != "/category/ogradki/" %}
         <div class="category-details__col" id="filter-category">
           <button type="button" class="close popup__close" id="close-filter"><span></span></button>
           {{ min_price_product }}
@@ -69,7 +69,7 @@
             <button type=" submit" class="filter__submit">Фильтровать</button>
           </form>
         </div>
-        {% endif %}
+        {% endif %}{% endcomment %}
         <div class="category-details__col category-details__col--last">
           <button type="button" class="category-details__filter"><i
               class="fa-solid fa-arrow-up-wide-short"></i></button>
@@ -86,6 +86,7 @@
           {% endif %}
         </div>
       </div>
+
       <div class="pagging">
         <a href="{% if products.has_previous %}?{% chenge_params page=products.previous_page_number %}{% else %}#{% endif %}"
            class="pagging__arrow {% if not products.has_previous%}disabled{% endif %}">«</a>
