--- a/#src/templates/admin/shop/product/product_edit.html
+++ b/#src/templates/admin/shop/product/product_edit.html
@@ -200,8 +200,10 @@
         <button type="button" id="add-char" class="form__plus">Добавить характеристику</button>
       </div>
     </form>
-    <div class="select-hide" id="select-hide" style="opacity: 0; position: absolute">{{ option_form.type }} {{
-      product_char_form.char_name }}</div>
+    <div class="select-hide" id="select-hide" style="opacity: 0; position: absolute">
+      {{ option_form.type }}
+      {{ product_char_form.char_name }}
+    </div>
   </div>
 </div>
 
