--- a/#src/scss/pages/catalog/product.scss
+++ b/#src/scss/pages/catalog/product.scss
@@ -347,6 +347,20 @@
     }
   }
 
+  &__info-char{
+    box-sizing: border-box;
+    border-radius: 5px;
+    background: rgb(243, 243, 243);
+    border: none;
+    width: 100%;
+    max-width: 160px;
+    height: 35px;
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 20px;
+  }
+
   // .info-card__label
 
   &__label {
