--- a/#src/templates/theme/pages/catalog/product.html
+++ b/#src/templates/theme/pages/catalog/product.html
@@ -115,13 +115,15 @@
               {% for ch_name in char_name %}
               <div class="info-card__item">
                 <p class="info-card__label">{{ ch_name.text_name }}:</p>
+                {% for char_value in chars %} {% if char_value.char_name.text_name == ch_name.text_name %}
                 <p class="info-card__info-char">Гранит</p>
-                <select name="{{ ch_name.filter_name }}" id="{{ ch_name.filter_name }}"
+                {% endif %} {% endfor %}
+                {% comment %}<select name="{{ ch_name.filter_name }}" id="{{ ch_name.filter_name }}"
                   data-name="{{ ch_name.text_name }}">
                   {% for char_value in chars %} {% if char_value.char_name.text_name == ch_name.text_name %}
                   <option value="{{ char_value.char_value }}">{{ char_value.char_value }}</option>
                   {% endif %} {% endfor %}
-                </select>
+                </select>{% endcomment %}
               </div>
               {% endfor %}
               <div class="info-card__item">
