--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3701,6 +3701,20 @@ body::after {
   line-height: 20px;
 }
 
+.info-card__info-char {
+  box-sizing: border-box;
+  border-radius: 5px;
+  background: rgb(243, 243, 243);
+  border: none;
+  width: 100%;
+  max-width: 160px;
+  height: 35px;
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 20px;
+}
+
 .info-card__label {
   color: rgb(116, 116, 116);
   font-size: 10px;
