--- a/#src/scss/pages/catalog/product.scss
+++ b/#src/scss/pages/catalog/product.scss
@@ -348,6 +348,9 @@
   }
 
   &__info-char{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     box-sizing: border-box;
     border-radius: 5px;
     background: rgb(243, 243, 243);
@@ -357,7 +360,7 @@
     height: 35px;
     color: rgb(0, 0, 0);
     font-size: 16px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 20px;
   }
 
