--- a/main/core/theme/mb/templates/pages/orders/create.html
+++ b/main/core/theme/mb/templates/pages/orders/create.html
@@ -41,6 +41,10 @@
                 <input type="text" class="form__controls" name="delivery_address" />
                 <span class="form__help-text">Город, улица, дом, подъезд, офис/квартира</span>
               </div>
+              <div class="form__group" id="" >
+                <textarea class="form__controls-textarea" name="message" id="id_message" rows="10"></textarea>
+                <span class="form__help-text">Комментарий к заказу</span>
+              </div>
             </div>
             <button type="submit" class="form__submit _btn">Отправить</button>
           </div>
