--- a/#src/templates/theme/includes/card.html
+++ b/#src/templates/theme/includes/card.html
@@ -21,7 +21,7 @@
         {% if product.model %}
           Модель: {{ product.model }}
         {% else %}
-          Наименование: {{ product.name }}
+          {{ product.name }}
         {% endif %}
       </span>
     </a>
