--- a/main/core/theme/mb/templates/includes/card.html
+++ b/main/core/theme/mb/templates/includes/card.html
@@ -21,7 +21,7 @@
         {% if product.model %}
           Модель: {{ product.model }}
         {% else %}
-          Наименование: {{ product.name }}
+          {{ product.name }}
         {% endif %}
       </span>
     </a>
