--- a/main/core/theme/mb/templates/components/header-single.html
+++ b/main/core/theme/mb/templates/components/header-single.html
@@ -70,6 +70,7 @@
             </div>
             {% if category_menu %}
             <ul class="nav__submenu submenu">
+              <li><a href="{% url 'granit' %}">Гранитные</a></li>
               {% for category in category_menu %}
               <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
               {% endfor %}
