--- a/#src/templates/theme/pages/catalog/granit.html
+++ b/#src/templates/theme/pages/catalog/granit.html
@@ -17,7 +17,7 @@
   <section class="category-details">
     <div class="category-details__container">
       <div class="category-details__head">
-        <h1 class="category-details__title _title">Гранитные памятники в Томске – памятник на могилу с установкой</h1>
+        <h1 class="category-details__title _title">Гранитные памятники в Томске</h1>
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
           <a href="/" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
             class="breadcrumbs__item">
@@ -29,6 +29,10 @@
             Каталог
             <meta itemprop="position" content="2" />
           </a>
+          <span itemprop="name" class="breadcrumbs__item">
+          Гранитные памятники
+          <meta itemprop="position" content="3" />
+        </span>
         </div>
       </div>
       <div class="category-details__row-onecol">
