--- a/#src/templates/theme/components/footer.html
+++ b/#src/templates/theme/components/footer.html
@@ -13,7 +13,7 @@
         </ul>
         <ul class="footer__list">
           <li class="footer__item--first">Услуги</li>
-          <li class="footer__item"><a href="">Доставка</a></li>
+          <li class="footer__item"><a href="{% url 'delivery' %}">Доставка</a></li>
           <li class="footer__item"><a href="{% url 'service_new' %}">Установка</a></li>
           <li class="footer__item"><a href="{% url 'service_grav' %}">Гравировка</a></li>
         </ul>
@@ -22,7 +22,7 @@
           <li class="footer__item"><a href="{% url 'category' %}">Каталог</a></li>
           <li class="footer__item"><a href="{% url 'about' %}">О нас</a></li>
           <li class="footer__item"><a href="{% url 'gallery' %}">Наши работы</a></li>
-          <li class="footer__item"><a href="">Оплата</a></li>
+          <li class="footer__item"><a href="{% url 'delivery' %}">Оплата</a></li>
           <li class="footer__item"><a href="{% url 'service' %}">Услуги</a></li>
           <li class="footer__item"><a href="{% url 'contact' %}">Контакты</a></li>
         </ul>
