--- a/#src/templates/theme/pages/catalog/granit.html
+++ b/#src/templates/theme/pages/catalog/granit.html
@@ -95,25 +95,40 @@
     <div class="category-detail__container">
       <div class="text">
         <p>
-          Изготавливаем и устанавливаем гранитные памятники в Томске. В наличии классические и эксклюзивные модели разной
+          Изготавливаем и устанавливаем гранитные памятники в Томске. В наличии классические и эксклюзивные модели
+          разной
           формы и размера. Работаем с прочным, морозостойким гранитом, который сохраняет внешний вид десятилетиями.
         </p>
         <p><strong>Наши услуги:</strong></p>
         <ul>
           <li>
-            <strong>Изготовление памятников стандартных и индивидуальных размеров</strong> – мы подберём оптимальные параметры памятника в зависимости от ваших пожеланий и особенностей участка.
+            <strong>Изготовление памятников стандартных и индивидуальных размеров</strong> – мы подберём оптимальные
+            параметры памятника в зависимости от ваших пожеланий и особенностей участка.
           </li>
           <li>
-            <strong><a href="/service/gravirovka/">Гравировка</a>, фотокерамика, художественное оформление</strong> – создание уникальных надписей, изображений и декоративных элементов, которые делают памятник действительно персонализированным.
+            <strong><a href="/service/gravirovka/">Гравировка</a>, фотокерамика, художественное оформление</strong> –
+            создание уникальных надписей, изображений и декоративных элементов, которые делают памятник действительно
+            персонализированным.
           </li>
           <li>
-            <strong><a href="">Доставка</a> и установка на кладбище в Томске и области</strong> – мы доставляем памятники и осуществляем их установку, соблюдая все требования, чтобы памятник был установлен надёжно и аккуратно.
+            <strong><a href="/delivery/">Доставка</a> и установка на кладбище в Томске и области</strong> – мы
+            доставляем памятники и осуществляем их установку, соблюдая все требования, чтобы памятник был установлен
+            надёжно и аккуратно.
           </li>
           <li>
-            Благоустройство могилы – укладка плитки, установка оград, создание красивых и долговечных элементов для украшения места захоронения.
+            <strong><a href="/blog/blagoustroystvo-mogil-uhod-za-pamytiyu-o-blizkih/">Благоустройство
+              могилы</a></strong> – укладка плитки, установка оград, создание красивых и долговечных элементов для
+            украшения места захоронения.
           </li>
         </ul>
-
+        <p>
+          Оставьте заявку на сайте или свяжитесь с нами по телефону, и мы подберём для вас памятник, который будет
+          соответствовать всем вашим требованиям. Мы рассчитаем стоимость памятника с установкой и поможем сделать
+          выбор, который будет гармонично сочетаться с вашим представлением о достойном увековечении памяти.
+        </p>
+        <p>
+          Пусть этот памятник станет символом уважения и любви, который сохранит память о вашем близком на долгие годы
+        </p>
       </div>
     </div>
   </div>
