--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -2105,6 +2105,52 @@ body::after {
   pointer-events: none;
 }
 
+.popup__text h2 {
+  font-size: 35px;
+  line-height: 120%;
+}
+
+.popup__text a {
+  color: #41a2d0;
+  text-decoration: underline;
+}
+
+.popup__text p {
+  line-height: 140%;
+}
+
+.popup__text p span {
+  font-weight: 500;
+}
+
+.popup__text p + p {
+  margin-top: 20px;
+}
+
+.popup__text ul,
+.popup__text ol {
+  padding-left: 35px;
+}
+
+.popup__text ul li,
+.popup__text ol li {
+  padding-left: 16px;
+  position: relative;
+  line-height: 150%;
+}
+
+.popup__text ul li::before {
+  content: "";
+  position: absolute;
+  top: 0%;
+  margin-top: 10px;
+  left: 0;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #41a2d0;
+}
+
 .popup_show {
   z-index: 9999;
   visibility: visible;
@@ -3782,9 +3828,29 @@ body::after {
   gap: 60px;
 }
 
+.service-content__col {
+  flex: 0 0 50%;
+}
+
+.service-content__col:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .service-content__col img {
-  width: 520px;
-  height: 400px;
+  max-width: 100%;
+  max-height: 700px;
+}
+
+.service-content__text h2 {
+  font-size: 35px;
+  line-height: 120%;
+}
+
+.service-content__text a {
+  color: #41a2d0;
+  text-decoration: underline;
 }
 
 .service-content__text p {
@@ -3799,7 +3865,13 @@ body::after {
   margin-top: 20px;
 }
 
-.service-content__text ul li {
+.service-content__text ul,
+.service-content__text ol {
+  padding-left: 35px;
+}
+
+.service-content__text ul li,
+.service-content__text ol li {
   padding-left: 16px;
   position: relative;
   line-height: 150%;
@@ -3817,12 +3889,15 @@ body::after {
   background-color: #41a2d0;
 }
 
-.service-content__text ul li:last-child {
-  margin-bottom: 40px;
+.service-content .hidden_content {
+  display: -webkit-box;
+  -webkit-line-clamp: 20;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
-.service-content__text ul li + li {
-  margin-top: 15px;
+.service-content .hidden_content.active {
+  height: 100% !important;
 }
 
 .service-content__buttons {
@@ -3830,11 +3905,22 @@ body::after {
   align-items: center;
   gap: 30px;
   flex-wrap: wrap;
+  margin-top: 50px;
+}
+
+.service-content__hide-btn {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  text-align: right;
 }
 
 .service-content__btn {
   width: 290px;
-  margin-top: 50px;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .gallery__inner {
@@ -4984,7 +5070,6 @@ body::after {
 
   .service-content__btn {
     width: 100%;
-    margin-top: 20px;
   }
 }
 
