--- a/main/core/theme/mb/templates/components/popup.html
+++ b/main/core/theme/mb/templates/components/popup.html
@@ -84,3 +84,12 @@
     </div>
   </div>
 </div>
+
+<div id="more" aria-hidden="true" class="popup">
+  <div class="popup__wrapper">
+    <div class="popup__content">
+      <button data-close type="button" class="popup__close"></button>
+      <div id="popup-text" class="popup__text"></div>
+    </div>
+  </div>
+</div>
