--- a/#src/templates/theme/pages/service/service_grav.html
+++ b/#src/templates/theme/pages/service/service_grav.html
@@ -120,7 +120,7 @@
         <h2 class="service-content__title _title-h2">Портретная плитка на цветные и светлые камни</h2>
         <div class="service-content__row">
           <div class="service-content__col">
-            <img src="{% static 'theme/mb/images/portretnaya-plitka.JPG' %}" alt="Преимущества гравировки станком"
+            <img src="{% static 'theme/mb/images/portretnaya-plitka.jpg' %}" alt="Преимущества гравировки станком"
                  title="Преимущества гравировки станком" class=""/>
           </div>
           <div class="service-content__col">
