--- a/main/core/theme/mb/templates/pages/service/service_grav.html
+++ b/main/core/theme/mb/templates/pages/service/service_grav.html
@@ -16,8 +16,8 @@
 <div class="wrapper">
   <div class="hero">
     <div class="hero__container">
-      <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="Гравировка на памятнике Томск"
-           title="Гравировка на памятнике Томск" class="hero__image"/>
+      <img src="{% static 'theme/mb/images/1.png' %}" alt="Гравировка на памятнике Томск"
+           title="Гравировка на памятнике Томск" class="hero__image-grav"/>
       <div class="hero__inner">
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
           <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
